# boost-search-engine

./: .gitignore  LICENSE  README-cn.md  README.md  work.md
search-engine/: CMakeLists.txt  debug_server  makefile  parser  parser.cc  parser.hpp  util.hpp
search-engine/data/: input
search-engine/include/: cppjieba  index.hpp  log.hpp  parser.hpp  searcher.hpp  util.hpp
search-engine/src/: debug.cc  parser.cc  server.cc
search-engine/wwwroot/: index.bak.html  index.html
